--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <h1 class="mbr-section-title display-1"><span style="font-weight: normal;"><em>GOVIND YADAV</em></span><br>Developer.</h1>
                     <p class="mbr-section-lead lead">Interactive Resume</p>
-                    <div class="mbr-section-btn"> <a class="btn btn-lg btn-white btn-white-outline" href="https://drive.google.com/open?id=0Bydw75q6w5WkRElHVmdpbTA4eHM" target="_blank"><span class="etl-icon icon-document mbr-iconfont mbr-iconfont-btn"></span>DOWNLOAD Resume</a></div>
+                    <div class="mbr-section-btn"> <a class="btn btn-lg btn-white btn-white-outline" href="https://drive.google.com/file/d/0B0FxzkY9CSa4Sk9FTjVWdUF2S3dMZXdRVVRlX1ZuSzF3cmsw/view?usp=sharing" target="_blank"><span class="etl-icon icon-document mbr-iconfont mbr-iconfont-btn"></span>DOWNLOAD Resume</a></div>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section-md-padding" id="social-buttons4-1" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-md-padding" id="social-buttons4-1" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
     
     <div class="container">
         <div class="row">
