mail and phone number added

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 
                     <h1 class="mbr-section-title display-1"><span style="font-weight: normal;"><em>GOVIND YADAV</em></span><br>Developer.</h1>
                     <p class="mbr-section-lead lead">Interactive Resume</p>
-                    <div class="mbr-section-btn"> <a class="btn btn-lg btn-white btn-white-outline" href="https://drive.google.com/file/d/0B0FxzkY9CSa4Sk9FTjVWdUF2S3dMZXdRVVRlX1ZuSzF3cmsw/view?usp=sharing" target="_blank"><span class="etl-icon icon-document mbr-iconfont mbr-iconfont-btn"></span>DOWNLOAD Resume</a></div>
+                    <div class="mbr-section-btn"> <a class="btn btn-lg btn-white btn-white-outline" href="https://drive.google.com/file/d/0B0FxzkY9CSa4Sk9FTjVWdUF2S3dMZXdRVVRlX1ZuSzF3cmsw/view?usp=sharing" target="_blank"><span class="etl-icon icon-document mbr-iconfont mbr-iconfont-btn"></span>DOWNLOAD Resume</a> </div>
                 </div>
             </div>
         </div>
@@ -47,7 +47,7 @@
 
 </section>
 
-<section class="engine"><a rel="external" href="https://mobirise.com">Mobirise</a></section><section class="mbr-section mbr-section-md-padding" id="social-buttons4-1" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 30px;">
+<section class="engine"><a rel="external" href="https://mobirise.com">Web Page Builder</a></section><section class="mbr-section mbr-section-md-padding" id="social-buttons4-1" style="background-color: rgb(46, 46, 46); padding-top: 30px; padding-bottom: 0px;">
     
     <div class="container">
         <div class="row">
@@ -55,6 +55,27 @@
                 <h3 class="mbr-section-title display-2">Connect with me</h3>
                 <div><a class="btn btn-social" title="Twitter" target="_blank" href="https://twitter.com/iGovindY"><i class="socicon socicon-twitter"></i></a> <a class="btn btn-social" title="Facebook" target="_blank" href="https://www.facebook.com/govindnitr"><i class="socicon socicon-facebook"></i></a>      <a class="btn btn-social" title="LinkedIn" target="_blank" href="https://www.linkedin.com/in/igovindy/"><i class="socicon socicon-linkedin"></i></a>   </div>
             </div>
+        </div>
+    </div>
+</section>
+
+<section class="mbr-section mbr-section-md-padding mbr-footer footer1" id="contacts1-8" style="background-color: rgb(46, 46, 46); padding-top: 0px; padding-bottom: 30px;">
+    
+    <div class="container">
+        <div class="row">
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <div><a href="#top"><img src="assets/images/govind-photo-cropped-128x132.jpg" alt="Govind Yadav" title="Govind Yadav"></a></div>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p></p><p><br></p><p>igovindyadav@gmail.com</p><p>+91 98805 10754&nbsp;&nbsp;&nbsp;&nbsp;</p><p></p>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p></p>
+            </div>
+            <div class="mbr-footer-content col-xs-12 col-md-3">
+                <p></p>
+            </div>
+
         </div>
     </div>
 </section>
